# Python

NeuralNetworkMNIST/: MNIST_test.py  MNIST_train.py  NN_class.py  method_test.py  weights_biases.json
course/python1-2526-JakubChwiejczak/: Dockerfile  Makefile  README.md  conda-lock-dev.yml  conda-lock.yml  env-dev.yml  env.yml  pyproject.toml
course/python1-2526-JakubChwiejczak/python1course.egg-info/: PKG-INFO  SOURCES.txt
course/python1-2526-JakubChwiejczak/python1course/zaj3/: funkcje.py  lambda.py  listySkladane.py  petlaZ1.py
course/python1-2526-JakubChwiejczak/python1course/zajecia04/: __init__.py  main_zajecia04.py
course/python1-2526-JakubChwiejczak/python1course/zajecia04/fleet/: Station.py  __init__.py  ambulance.py
course/python1-2526-JakubChwiejczak/python1course/zajecia04/operations/: __init__.py  incident.py  incident_manager.py  incident_queue.py
course/python1-2526-JakubChwiejczak/python1course/zajecia04/personnel/: driver.py  employee.py
course/python1-2526-JakubChwiejczak/python1course/zajecia2/: P2.py  Zadanie1.py  czas.py  matematyka.py  skrypt2.py  zadanie 5.py  zadanie3.py  zadanie4.py  zadanie6.py
course/python1-2526-JakubChwiejczak/python1course/zajecia6/: zaj6_1.py  zaj6_2.py  zaj6_3.py
course/python1-2526-JakubChwiejczak/python1course/zajecia7/: zadanie_1.py  zadanie_2.py
course/python1-2526-JakubChwiejczak/python1course/zajecia8/: Cinema.py  getLogger.py  loggingFile.py
course/python1-2526-JakubChwiejczak/python1course/zajecia9/: plik.txt
course/python1-2526-JakubChwiejczak/tests/: test_cinema.py
(+1 files in other folders)
